tests/errors/circularly-included.spcasmtest.noerror
org 0

include "circular-include.spcasmtest"
